--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav
+  class="navbar navbar-expand-lg navbar-light bg-light"
+  style="margin-bottom: 8px"
+>
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
     <button
