--- a/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/recipes/recipes-list/recipes-list.component.html
@@ -1,1 +1,30 @@
-<app-recipes-list-item></app-recipes-list-item>
+<div class="row">
+  <div class="col-xs-12">
+    <button type="button" class="btn btn-success">New Recipe</button>
+  </div>
+  <hr style="margin: 10px 0px" />
+  <div class="row">
+    <div class="col-xs-12">
+      <a
+        href="#"
+        class="list-group-item clearfix border bg-light"
+        *ngFor="let item of recipes; index as i"
+        style="padding: 10px"
+      >
+        <div class="pull-left">
+          <h4 class="list-group-item-heading">{{ item.name }}</h4>
+          <p class="list-group-item-text">{{ item.description }}</p>
+        </div>
+        <span class="pull-right">
+          <img
+            [src]="item.imgPath"
+            [alt]="item.name"
+            class="img-responsive"
+            style="max-height: 50px"
+          />
+        </span>
+      </a>
+      <app-recipes-list-item></app-recipes-list-item>
+    </div>
+  </div>
+</div>
