--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,1 +1,35 @@
-<p>shopping-edit works!</p>
+<div class="row">
+  <div class="col-xs-12">
+    <form action="">
+      <div class="row">
+        <div class="col-sm-5 form-group">
+          <label for="name">Name</label>
+          <input type="text" name="" id="name" class="form-control" />
+        </div>
+        <div class="col-sm-2 form-group">
+          <label for="amount">Amount</label>
+          <input type="number" name="" id="amount" class="form-control" />
+        </div>
+      </div>
+      <div class="row" style="margin: 10px 0px 0px">
+        <div class="col-xs-12" style="padding: 0px">
+          <button
+            class="btn btn-success"
+            style="margin-right: 8px"
+            type="submit"
+          >
+            Add
+          </button>
+          <button
+            class="btn btn-danger"
+            style="margin-right: 8px"
+            type="button"
+          >
+            Delete
+          </button>
+          <button class="btn btn-primary" type="button">Clear</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
