--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -2,6 +2,15 @@
   <div class="col-xd-10">
     <app-shopping-edit></app-shopping-edit>
     <hr />
-    <p>The list</p>
+    <ul class="list-group">
+      <a
+        href="#"
+        class="list-group-item"
+        style="cursor: pointer"
+        *ngFor="let item of ingredients; index as i"
+      >
+        {{ item.name }} {{ item.amount }}
+      </a>
+    </ul>
   </div>
 </div>
