add trachBy for ngFor

--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -7,9 +7,9 @@
         href="#"
         class="list-group-item"
         style="cursor: pointer"
-        *ngFor="let item of ingredients; index as i"
+        *ngFor="let item of ingredients; index as i; trackBy: trackByFn"
       >
-        {{ item.name }} {{ item.amount }}
+        {{ item.id }}. {{ item.name }} {{ item.amount }}
       </a>
     </ul>
   </div>
