--- a/Section 5 - Components and DataBinding/src/app/cockfit/cockfit.component.html
+++ b/Section 5 - Components and DataBinding/src/app/cockfit/cockfit.component.html
@@ -2,20 +2,23 @@
   <div class="col-xs-12">
     <p>Add new Servers or blueprints!</p>
     <label>Server Name</label>
-    <input type="text" class="form-control" [(ngModel)]="newServerName" />
+    <!-- <input type="text" class="form-control" [(ngModel)]="newServerName" /> -->
+
+    <input type="text" class="form-control" #serverName />
+
     <label>Server Content</label>
     <input type="text" class="form-control" [(ngModel)]="newServerContent" />
     <br />
     <button
       class="btn btn-primary"
       style="margin-right: 8px"
-      (click)="onAddServer()"
+      (click)="onAddServer(serverName)"
     >
       Add Server
     </button>
     <button
       class="btn btn-primary"
-      (click)="onAddBlueprint()"
+      (click)="onAddBlueprint(serverName)"
       style="margin-right: 8px"
     >
       Add Server Blueprint
