add card common components

--- a/Section 5 - Components and DataBinding/src/app/cockfit/cockfit.component.html
+++ b/Section 5 - Components and DataBinding/src/app/cockfit/cockfit.component.html
@@ -7,7 +7,9 @@
     <input type="text" class="form-control" #serverName />
 
     <label>Server Content</label>
-    <input type="text" class="form-control" [(ngModel)]="newServerContent" />
+    <!-- <input type="text" class="form-control" [(ngModel)]="newServerContent" /> -->
+    <input type="text" class="form-control" #serverContentInput />
+
     <br />
     <button
       class="btn btn-primary"
