--- a/Section 5 - Components and DataBinding/src/app/server-component/server-component.component.html
+++ b/Section 5 - Components and DataBinding/src/app/server-component/server-component.component.html
@@ -1,15 +1,1 @@
- <div class="card border bg-light" style="margin-top: 4px">
-  <div class="card-body">
-    <div class="card-title">{{ element.name }}</div>
-    <div class="card-subtitle">
-      <strong
-        *ngIf="element.type === 'server'; else elseBlock"
-        style="color: red"
-        >{{ element.content }}</strong
-      >
-      <ng-template #elseBlock>
-        <em style="color: blue">{{ element.content }}</em></ng-template
-      >
-    </div>
-  </div>
-</div>
+<ng-content></ng-content>
