--- a/Section 5 - Components and DataBinding/src/app/app.component.html
+++ b/Section 5 - Components and DataBinding/src/app/app.component.html
@@ -9,6 +9,20 @@
     <app-server-component
       *ngFor="let item of serverElements"
       [srvElement]="item"
-    ></app-server-component>
+    >
+      <app-card>
+        <span cardTitle>{{ item.name }}</span>
+        <span cardSubtitle>
+          <strong
+            *ngIf="item.type === 'server'; else elseBlock"
+            style="color: red"
+            >{{ item.content }}</strong
+          >
+          <ng-template #elseBlock>
+            <em style="color: blue">{{ item.content }}</em></ng-template
+          >
+        </span>
+      </app-card>
+    </app-server-component>
   </div>
 </div>
